tests/baselines/reference/exponentiationOperatorWithNew.errors.txt
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithNew.ts(4,1): error TS2365: Operator '**' cannot be applied to types 'any' and 'number | bigint'.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithNew.ts(5,1): error TS2365: Operator '**' cannot be applied to types 'any' and 'number | bigint'.
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithNew.ts(6,6): error TS2365: Operator '**' cannot be applied to types 'any' and 'number | bigint'.


==== tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithNew.ts (3 errors) ====
    var a: any;
    var b: any;
    var c: any;
    new a ** b ** c;
    ~~~~~~~~~~~~~~~
!!! error TS2365: Operator '**' cannot be applied to types 'any' and 'number | bigint'.
    new a ** new b ** c;
    ~~~~~~~~~~~~~~~~~~~
!!! error TS2365: Operator '**' cannot be applied to types 'any' and 'number | bigint'.
    new (a ** b ** c);
         ~~~~~~~~~~~
!!! error TS2365: Operator '**' cannot be applied to types 'any' and 'number | bigint'.